--- a/index.css
+++ b/index.css
@@ -59,6 +59,7 @@ section{
     animation-fill-mode: forwards;
     transition-property: transform;
     transition-duration: 1s;
+    z-index: -1;
 }
 @keyframes landingpage-section1-heading{
     0%{opacity: 0}
@@ -79,6 +80,7 @@ section{
     animation-fill-mode: forwards;
     transition-property: transform;
     transition-duration: 1s;
+    z-index: -1;
 }
 .request-demo-container{
     display: flex;
@@ -98,6 +100,9 @@ section{
     animation-fill-mode: forwards;
     transition-property: transform;
     transition-duration: 1s;
+}
+.landingpage-section1-inputboxwrap{
+    z-index: -1;
 }
 .request-demo-form{
     display: flex;
@@ -168,6 +173,7 @@ section{
   justify-content: center;
   align-items: center;
   padding: 10% 10%;
+  z-index: -1;
   
 }
 .landingpage-section2-videocontainer{
@@ -178,6 +184,7 @@ section{
     box-shadow: 0px 10.228px 17.047px 0px rgba(0, 0, 0, 0.17);
     width: 100%;
     height: 80%;
+    z-index: -1;
 }
 
 /* SECTION 7 */
