--- a/index.css
+++ b/index.css
@@ -173,8 +173,12 @@ section{
   justify-content: center;
   align-items: center;
   padding: 10% 10%;
-  z-index: -1;
   
+}
+@media(max-width: 980px){
+    #landingpage-section2{
+        background-image: none;
+    }
 }
 .landingpage-section2-videocontainer{
     /* margin: 10%; */
