--- a/index.css
+++ b/index.css
@@ -175,11 +175,7 @@ section{
   padding: 10% 10%;
   
 }
-@media(max-width: 980px){
-    #landingpage-section2{
-        background-image: none;
-    }
-}
+
 .landingpage-section2-videocontainer{
     /* margin: 10%; */
     border-radius: 0.42619rem;
@@ -188,7 +184,16 @@ section{
     box-shadow: 0px 10.228px 17.047px 0px rgba(0, 0, 0, 0.17);
     width: 100%;
     height: 80%;
-    z-index: -1;
+    z-index: 1;
+}
+@media(max-width: 980px){
+    #landingpage-section2{
+        background-image: none;
+    }
+    .landingpage-section2-videocontainer{
+        
+        z-index: -1;
+    }
 }
 
 /* SECTION 7 */
